[gd_scene load_steps=4 format=3 uid="uid://c5acfvpq6qka4"]

[ext_resource type="Script" uid="uid://qijpw27jfx7m" path="res://scenes/hr_task_docs.gd" id="1_ddmtg"]
[ext_resource type="Texture2D" uid="uid://c42ra4adlkf0o" path="res://characters/askingBackground.jpg" id="2_ddmtg"]
[ext_resource type="FontFile" uid="uid://cu0innmwdnk6r" path="res://Fonts/PlayfairDisplay-SemiBold.ttf" id="3_yh8me"]

[node name="HrTaskDocs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddmtg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.531
anchor_right = 0.5
anchor_bottom = 0.531
offset_left = -546.0
offset_top = -331.495
offset_right = 542.0
offset_bottom = 289.505
texture = ExtResource("2_ddmtg")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.181
anchor_right = 0.238
anchor_bottom = 0.181
offset_left = -40.176
offset_top = 1.255
offset_right = 758.824
offset_bottom = 80.255
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Documents handover for verification"
autowrap_mode = 3

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.51
anchor_right = 0.499
anchor_bottom = 0.51
offset_left = -269.848
offset_top = -86.95
offset_right = 282.152
offset_bottom = 75.05
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
select_mode = 1
item_count = 3
item_0/text = "Original Certificates"
item_1/text = "Work Permit"
item_2/text = "Old Resignation Letter"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.736
anchor_right = 0.5
anchor_bottom = 0.736
offset_left = -124.0
offset_top = -34.72
offset_right = 111.0
offset_bottom = 35.28
theme_override_font_sizes/font_size = 24
text = "Next"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.74
anchor_right = 0.5
anchor_bottom = 0.74
offset_left = -122.0
offset_top = -35.3
offset_right = 112.0
offset_bottom = 35.7
theme_override_font_sizes/font_size = 24
text = "Finish"

[node name="WrongPopup" type="AcceptDialog" parent="."]
position = Vector2i(762, 32)
size = Vector2i(505, 105)

[node name="ResultLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 193.0
offset_right = 769.0
offset_bottom = 429.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_yh8me")
theme_override_font_sizes/normal_font_size = 28

[node name="Button3" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 451.0
offset_top = 439.0
offset_right = 687.0
offset_bottom = 511.0
theme_override_font_sizes/font_size = 20
text = "End"
